src/test/resources/testinput/parsable/symtab/invalid_coco/invalidParameterNamesUnique.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidParameterNamesUnique {
  context Auction a, Auction a
  inv: true;
}